Bug 925259: Avoid sticky positioning inner table elements. r=dholbert